nullaway_error_EDE2DBC1-46E6-4373-9CCE-9C74B44FECAD.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-jms/src/main/java/org/springframework/jms/listener/SimpleMessageListenerContainer.java:352: error: [NullAway] passing @Nullable parameter 'connectionFactory' where @NonNull is required
                                        connectionFactory, new LocallyExposedJmsResourceHolder(session));
                                        ^
    (see http://t.uber.com/nullaway )
